--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html, body {
   }
 
   body {
-    background: black;
+    background: grey;
     display: flex;
     align-items: center;
     justify-content: center;
