--- a/style.css
+++ b/style.css
@@ -13,15 +13,50 @@ html, body {
   .my-popup{
     Width: 850px;
     Height: 600px;
-    Background: rgb(249, 197, 52);
+    Background: rgb(255, 217, 136);
     Box-sizing: border-box;
     Padding: 10px;
   
-    Position:absolute;
+    Position: absolute;
     top:50%;
     left:50%;
     Transform: translate(-50%,-50%);
-  
+
     display:none;
   }
+
+  .results {
+    align-items: center;
+    position: absolute;
+    left: 300px;
+    top: 75px;
+
+    font-size: 50pt;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .rematch {
+    align-items: center;
+    position: absolute;
+    width: 250px;
+    height: 100px;
+    left: 300px;
+    top: 400px;
+
+    background-color: rgb(48, 59, 97);
+    color: rgb(255, 255, 254);
+    border: 2px solid #ffffff;
+
+    font-size: 30pt;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+
+  .rematch:hover {background-color: #0b0f24}
   
+  .scoreboard {
+    position: absolute;
+    align-items: center;
+    color:rgb(0, 0, 158);
+    font-size: 50px;
+    top: 0px;
+  }
